2022-09-19T08:34:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3080993385
* notice: last 14d: unq all: 10 41
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 338 530
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 339 531
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-19]

2022-09-19T02:42:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3079598759
* notice: last 14d: unq all: 10 40
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 338 529
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 338 530
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-18T08:28:55Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3076451506
* notice: last 14d: unq all: 10 39
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 336 527
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 338 529
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-17T16:33:37Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3074036562
* notice: last 14d: unq all: 10 37
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 335 526
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 336 527
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-17]

2022-09-17T02:28:50Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3071805623