@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-19T08:34:33Z",
+  "timestamp" : "2022-09-20T02:32:13Z",
   "count_outdated" : 490,
   "uniques_outdated" : 311,
-  "count" : 531,
-  "uniques" : 339,
+  "count" : 532,
+  "uniques" : 340,
   "clones" : [
     {
       "timestamp": "2022-09-07T00:00:00Z",
@@ -91,10 +91,10 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
