@@ -1,5 +1,5 @@
 {
-  "count": 41,
+  "count": 42,
   "uniques": 10,
   "clones": [
     {
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
